Reduced size of spinner to fix wobbling on firefox [#172518840]

--- a/src/components/Username/Username.module.scss
+++ b/src/components/Username/Username.module.scss
@@ -14,8 +14,8 @@
   align-items: center;
 
   &__spinner {
-    width: 25px;
-    height: 25px;
+    width: 24px;
+    height: 24px;
   }
 }
 
